# DimScript

./: AndroidMainfest.xml  AndroidManifest.xml  README.md  build.gradle  dimc.py  main.ds  main.dscript  settings.gradle
.github/workflows/: build.yml  dim_runtime.h  dimc.py  main.yml
app/src/main/cpp/: CMakeLists.txt
app/src/main/cpp/app/: build.gradle
jni/: dim_runtime.h
